--- a/hello-arc/yaml/hello_arc.yaml
+++ b/hello-arc/yaml/hello_arc.yaml
@@ -33,4 +33,4 @@ spec:
         - containerPort: 8080
         env:
         - name: MESSAGE
-          value: Welcome to Azure Arc GitOps Demo Chris Frasch!
+          value: Welcome to Azure Arc GitOps Demo Chris Frasch - 02/27/2024!
