--- a/hello-arc/yaml/hello_arc.yaml
+++ b/hello-arc/yaml/hello_arc.yaml
@@ -33,4 +33,4 @@ spec:
         - containerPort: 8080
         env:
         - name: MESSAGE
-          value: Welcome to Azure Arc GitOps Demo Chris Frasch - 4/29/2024 - Changes via GitOps
+          value: Welcome to Azure Arc GitOps Demo Chris Frasch - 5/07/2024
